syntax = "proto3";

package auth;

option go_package = "./pb";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc Refresh(RefreshRequest) returns (RefreshResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
  rpc TokenRefresh(TokenRefreshRequest) returns (TokenRefreshResponse) {}
}

// Register

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  int64 status = 1;
  string error = 2;
}

// Login

message LoginRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message LoginResponse {
  int64 status = 1;
  string error = 2;
  string accesstoken = 3;
  string refreshtoken = 4;
}

// Refresh

message RefreshRequest { string token = 1; }

message RefreshResponse {
  int64 status = 1;
  string error = 2;
  int64 userId = 3;
}

// Validate

message ValidateRequest { string token = 1; }

message ValidateResponse {
  int64 status = 1;
  string error = 2;
  int64 userId = 3;
  string source = 4;
}

// TokenRefresh

message TokenRefreshRequest { string token = 1; }

message TokenRefreshResponse {
  int64 status = 1;
  string error = 2;
  string token = 3;
}